--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
-    "sequelize": "^6.37.2"
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.2",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/validator": "^13.11.9",
     "sequelize-cli": "^6.6.2",
+    "shadcn-nuxt": "^0.10.2",
     "typescript": "^5.4.4"
   }
 }
